--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,10 @@ body {
   font-size: 14pt;
 }
 
+.hidden {
+  display: none;
+}
+
 a {
   color: white;
   text-decoration: underline;
